--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,11 @@ spring:
     name: cobee server
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/cobee
-    username: root
-    password: cobeeMate
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: ${DB_USERNAME}
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -13,3 +15,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+google:
+  maps:
+    api-key: ${GOOGLE_MAPS_API_KEY}
