config: MongoDB 설정 추가 (#7)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
+  data:
+    mongodb:
+      uri: ${MONGODB_URI}
+
+
 google:
   maps:
     api-key: ${GOOGLE_MAPS_API_KEY}
