--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: cobee server
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/cobeeMate1
+    url: ${POSTGRES_URL}
     username: ${DB_USERNAME}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
