chore: add docker-compose.yml in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ resources/application.yml
 resources/firebase/
 **/src/test/resources/application.yml
 
+### docker-compose.yml
+docker-compose.yml
