--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,15 @@ resources/firebase/
 
 ### docker-compose.yml
 docker-compose.yml
+
+# MongoDB 데이터 디렉토리
+mongodb/
+redis_data/
+
+# Docker 볼륨 데이터
+**/data/
+**/*.wt
+**/*.lock
+**/WiredTiger*
+**/journal/
+**/diagnostic.data/
